--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
     <i class="footfab fab fa-instagram"></i>
     <i class="footfab fas fa-envelope"></i>
 
-    <p>© Copyright 2022 TinDog</p>
+    <p>© Copyright 2022 TinDog @Jai Hind</p>
 
   </footer>
 
